--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -74,26 +74,26 @@
     font-size: 55%;
     scroll-padding-top: 7rem;
   }
-  .home .box {
+  .slider .box {
     padding: 2rem;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     background-position: right !important;
   }
-  .home .box.second {
+  .slider .box.second {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
     background-position: left !important;
   }
-  .home .box .content {
+  .slider .box .content {
     text-align: center;
   }
-  .home .box .content span {
+  .slider .box .content span {
     font-size: 3rem;
   }
-  .home .box .content h3 {
+  .slider .box .content h3 {
     font-size: 4rem;
   }
   .footer-links h4 {
@@ -102,7 +102,7 @@
 }
 
 @media (max-width: 768px) {
-  .home .box {
+  .slider .box {
     background-position: center !important;
   }
   .header #menu-btn {
