--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,18 @@ a {
   padding: 50px 30px;
 }
 
+.our-services .icon-box h4 {
+  font-size: 18px;
+  color: #2f318b;
+}
+.our-services .icon-box p {
+  font-size: 14px;
+}
+
+.our-services .icon-box:hover {
+  transform: translateY(-10px) !important;
+}
+
 .quote {
   text-align: center !important;
 }
@@ -80,18 +92,6 @@ a {
   border-top: 3px solid #2f318b;
   border-bottom: 3px solid #2f318b;
   padding: 30px;
-}
-
-.our-services .icon-box h4 {
-  font-size: 18px;
-  color: #2f318b;
-}
-.our-services .icon-box p {
-  font-size: 14px;
-}
-
-.our-services .icon-box:hover {
-  transform: translateY(-10px) !important;
 }
 
 .why-us .img {
@@ -158,7 +158,206 @@ hr {
   color: #fff;
 }
 
-/* ================================================= */
+.logo-jadwal {
+  background-color: #2f318b;
+}
+/* ======================================================================================================== */
+
+/*--------------------------------------------------------------
+# Footer
+--------------------------------------------------------------*/
+#footer {
+  font-size: 14px;
+  background: #2f318b;
+}
+
+#footer .footer-newsletter {
+  padding: 50px 0;
+  background: #f3f5fa;
+  text-align: center;
+  font-size: 15px;
+  color: #444444;
+}
+
+#footer .footer-newsletter h4 {
+  font-size: 24px;
+  margin: 0 0 20px 0;
+  padding: 0;
+  line-height: 1;
+  font-weight: 600;
+  color: #2f318b;
+}
+
+#footer .footer-newsletter form {
+  margin-top: 30px;
+  background: #fff;
+  padding: 6px 10px;
+  position: relative;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.06);
+  text-align: left;
+}
+
+#footer .footer-newsletter form input[type="email"] {
+  border: 0;
+  padding: 4px 8px;
+  width: calc(100% - 100px);
+}
+
+#footer .footer-newsletter form input[type="submit"] {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  border: 0;
+  background: none;
+  font-size: 16px;
+  padding: 0 20px;
+  background: #c41d25;
+  color: #fff;
+  transition: 0.3s;
+  border-radius: 50px;
+  box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+}
+
+#footer .footer-newsletter form input[type="submit"]:hover {
+  background: #209dd8;
+}
+
+#footer .footer-top {
+  padding: 60px 0 30px 0;
+  background: #fff;
+}
+
+#footer .footer-top .footer-contact {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-contact h3 {
+  font-size: 28px;
+  margin: 0 0 10px 0;
+  padding: 2px 0 2px 0;
+  line-height: 1;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #2f318b;
+}
+
+#footer .footer-top .footer-contact p {
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 0;
+  font-family: "Jost", sans-serif;
+  color: #5e5e5e;
+}
+
+#footer .footer-top h4 {
+  font-size: 16px;
+  font-weight: bold;
+  color: #2f318b;
+  position: relative;
+  padding-bottom: 12px;
+}
+
+#footer .footer-top .footer-links {
+  margin-bottom: 30px;
+}
+
+#footer .footer-top .footer-links ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#footer .footer-top .footer-links ul i {
+  padding-right: 2px;
+  color: #c41d25;
+  font-size: 18px;
+  line-height: 1;
+}
+
+#footer .footer-top .footer-links ul li {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+#footer .footer-top .footer-links ul li:first-child {
+  padding-top: 0;
+}
+
+#footer .footer-top .footer-links ul a {
+  color: #777777;
+  transition: 0.3s;
+  display: inline-block;
+  line-height: 1;
+}
+
+#footer .footer-top .footer-links ul a:hover {
+  text-decoration: none;
+  color: #c41d25;
+}
+
+#footer .footer-top .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #c41d25;
+  color: #fff;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+
+#footer .footer-top .social-links a:hover {
+  background: #209dd8;
+  color: #fff;
+  text-decoration: none;
+}
+
+#footer .footer-bottom {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  color: #fff;
+}
+
+#footer .copyright {
+  float: left;
+}
+
+#footer .credits {
+  float: right;
+  font-size: 13px;
+}
+
+#footer .credits a {
+  transition: 0.3s;
+}
+
+@media (max-width: 768px) {
+  #footer .footer-bottom {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  #footer .copyright,
+  #footer .credits {
+    text-align: center;
+    float: none;
+  }
+
+  #footer .credits {
+    padding-top: 4px;
+  }
+}
+
+/* ======================================
+fsdfasdfdsfs
+========================================*/
 
 .py-5 .align-items-start p {
   font-size: 1.3rem;
@@ -361,11 +560,11 @@ hr {
   text-align: center !important;
 }
 
-.home {
+.slider {
   padding: 0;
 }
 
-.home .box {
+.slider .box {
   min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -381,22 +580,22 @@ hr {
   padding: 2rem 9%;
 }
 
-.home .box.second {
+.slider .box.second {
   -webkit-box-pack: start;
   -ms-flex-pack: start;
   justify-content: flex-start;
 }
 
-/* .home .box .content {
+/* .slider .box .content {
 } */
 
-.home .box .content span {
+.slider .box .content span {
   font-size: 6rem;
   color: #ffffff;
   text-shadow: 6px 4px 5px #353434;
 }
 
-.home .box .content h3 {
+.slider .box .content h3 {
   font-size: 8rem;
   color: #ffffff;
   padding-top: 0.5rem;
@@ -404,7 +603,7 @@ hr {
   text-shadow: 6px 4px 5px #000000;
 }
 
-.home .box .content p {
+.slider .box .content p {
   line-height: 2;
   color: #ffffff;
   font-size: 3rem;
@@ -451,7 +650,7 @@ hr {
 }
 
 .about {
-  background: rgb(255, 255, 255);
+  background-color: #f0f1f4;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
