--- a/public/css/style.css
+++ b/public/css/style.css
@@ -161,6 +161,25 @@ hr {
 .logo-jadwal {
   background-color: #2f318b;
 }
+
+.tempat-jadwal {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.img-thumbnail {
+  background-color: transparent !important;
+  padding: 0;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+.black {
+  border: solid black 2px;
+}
+
 /* ======================================================================================================== */
 
 /*--------------------------------------------------------------
@@ -213,7 +232,7 @@ hr {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #c41d25;
+  background: #1e3a76;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -225,7 +244,7 @@ hr {
 }
 
 #footer .footer-top {
-  padding: 60px 0 30px 0;
+  padding: 50px 0 30px 0;
   background: #fff;
 }
 
@@ -271,7 +290,7 @@ hr {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #c41d25;
+  color: #1e3a76;
   font-size: 18px;
   line-height: 1;
 }
@@ -295,13 +314,13 @@ hr {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #c41d25;
+  color: #1e3a76;
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #c41d25;
+  background: #1e3a76;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -336,23 +355,6 @@ hr {
 
 #footer .credits a {
   transition: 0.3s;
-}
-
-@media (max-width: 768px) {
-  #footer .footer-bottom {
-    padding-top: 20px;
-    padding-bottom: 20px;
-  }
-
-  #footer .copyright,
-  #footer .credits {
-    text-align: center;
-    float: none;
-  }
-
-  #footer .credits {
-    padding-top: 4px;
-  }
 }
 
 /* ======================================
